grammar.txt
expression -> term -> factor naming convention:
expression for loose-binding + -
term for tighter-binding like * /
factor for things like parentheses that explicitly group things or things that have no operators.

using EBNF (more or less):


Nonterminals are wrapped in <>
Individual tokens are in ""
[...] contains optional elements (zero or one time)
{...} states repetition (zero or more times)
(...) groups choices or sequences together

Terminals: type, IDENTIFIER, INTEGER

2026-09-27 parser grammar:

<program>		= { <function> }
<function>		= "int" IDENTIFIER "(" <paramList> ")" <functionBody>
<paramList>		= [ <parameter> { "," <parameter> } ]
<parameter>		= "int" IDENTIFIER
<functionBody>	=  <compound>
<statement>		= <ret> | <declaration> | <assignment> | <if> |
				  <while> | <dowhile> | <for> | "break" | "continue" | <compound> |
				  <expression> ";"
<compound>		= "{" { <statement> } "}"
<if>			= "if" "(" <expression> ")" <statement> [ <else> ] // else resolves to nearest if
<else>			= "else" <statement>
<ret>			= "return" <expression>
<declaration>	= "int" IDENTIFIER [ "=" <expression> ]
<expression>	= <assignment>
<assignment>	= <logicalOr> [ "=" <assignment> ]
<logicalOr>		= <logicalAnd>	{ "||" <logicalAnd> }
<logicalAnd>	= <equality>	{ "&&" <equality> }
<equality>		= <relational>	{ ( "==" | "!=") <relational> }
<relational>	= <additive>	{ ( "<" | "<=" | ">" | ">=" ) <additive> }
<additive>		= <term>		{ ("+" | "-") <term> }
<term>			= <unary>		{ "*" <unary> }
<unary>			= <unop> <unary> | <factor>
<unop>			= "-" | "!"
<factor>		= INTEGER | <call> | IDENTIFIER | "(" <expression> ")"
<call>			= IDENTIFIER "(" <arguments> ")"
<arguments>		= [ <expression> { "," <expression }  ]
<while>			= "while" "(" <expression> ")" <statement>
<dowhile>		= "do" <statement> "while" "(" <expression> ")"
<for>			= "for" "(" [<expression> | <declaration>] ";" [<expression>] ";" [<expression>] ")" <statement>


TODO: Add the AST definition. Add a definition to every stage of the compiler.
I already occasionally forget that I implemented something. Sandler p.73 pdf 113

p.75 pdf 115 contains more information on how to define the IR.
